Ajuste en la instanciación de objetos utilizando newInstance() deprecado, y cambios en AbstractDataController para gestionar el objeto xml desde la misma clase y no desde un manejador de eventos.